--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -24,44 +24,97 @@
     <normaloff>../icon.icns</normaloff>../icon.icns</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout">
+   <layout class="QGridLayout" name="gridLayout_5">
     <item row="0" column="0">
      <widget class="QSplitter" name="splitter_2">
-      <property name="styleSheet">
-       <string notr="true"/>
-      </property>
       <property name="orientation">
        <enum>Qt::Orientation::Horizontal</enum>
       </property>
-      <widget class="CodeEditor" name="plainTextEdit">
-       <property name="font">
-        <font>
-         <family>JetBrains Mono</family>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true"/>
-       </property>
-       <property name="plainText">
-        <string>.global _start
+      <widget class="QWidget" name="verticalLayoutWidget">
+       <layout class="QVBoxLayout" name="verticalLayout_2">
+        <item>
+         <widget class="QListWidget" name="listWidget">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>25</height>
+           </size>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QStackedWidget" name="stackedWidget">
+          <property name="currentIndex">
+           <number>0</number>
+          </property>
+          <widget class="QWidget" name="page">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <layout class="QGridLayout" name="gridLayout_4">
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
+            <item row="0" column="0">
+             <layout class="QGridLayout" name="gridLayout_3">
+              <item row="0" column="1">
+               <widget class="CodeEditor" name="plainTextEdit">
+                <property name="font">
+                 <font>
+                  <family>JetBrains Mono</family>
+                 </font>
+                </property>
+                <property name="styleSheet">
+                 <string notr="true"/>
+                </property>
+                <property name="plainText">
+                 <string>.global _start
 .text
 _start:
-	mov r7, #0x04   @ write
-	mov r0, #1      @ stdout
-	ldr r1, =msg
-	mov r2, #13
-	svc #0
+        mov r7, #0x04   @ write
+        mov r0, #1      @ stdout
+        ldr r1, =msg
+        mov r2, #13
+        svc #0
 
-	mov r7, #1      @ exit
-	mov r0, #0
-	svc #0
+        mov r7, #1      @ exit
+        mov r0, #0
+        svc #0
 
 .align 4
 msg:	.ascii &quot;Hello World\n&quot;
 
 
-	</string>
-       </property>
+        </string>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </item>
+           </layout>
+          </widget>
+          <widget class="QWidget" name="page_2"/>
+         </widget>
+        </item>
+       </layout>
       </widget>
       <widget class="QSplitter" name="splitter">
        <property name="orientation">
