--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -102,6 +102,9 @@
           <bool>true</bool>
          </property>
          <widget class="QWidget" name="tab">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="autoFillBackground">
            <bool>false</bool>
           </property>
